[package]
name = "tsfrv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
tokio = { version = "1", features = ["full"] }
encoding_rs = "0.8"
chrono = "0.4"
tokio-rustls = "0.22"
webpki = "0.21"
webpki-roots = "0.21"
rustls = "0.21"
