[package]
name = "tsfrv"
version = "0.1.0"
edition = "2021"
authors = ["Masanori Kusunoki <masanork@gmail.com>"]
description = "tsfrv: Telnet over SSL/TLS 電子公告ビューア (Cloudflare Workers)"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ["http"] }
worker-macros = { version = "0.8", features = ["http"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
http = "1"
tokio = { version = "1", default-features = false, features = ["io-util"] }

[profile.release]
lto = true
strip = true
codegen-units = 1